plugins/plugin-bash-like/web/css/xterm.css
.xterm-screen, .xterm-container .xterm-rows > div {
    transition: width 10ms ease-in-out, height 10ms ease-in-out;
}

tab:not(.xterm-alt-buffer-mode) .xterm-container .xterm-screen {
    height: auto !important;
}

/* alt buffer mode */
tab.xterm-alt-buffer-mode .repl-inner {
    overflow: hidden;
    display: flex;
    align-items: flex-start;
    -webkit-app-region: drag; /* for emacs/vi, in case there is a top slice of repl-inner visible */
}
tab.xterm-alt-buffer-mode .repl-inner .repl-block.processing {
    padding: 0;
    -webkit-app-region: no-drag; /* but make sure the content of the blocks are not draggable */
}
tab.xterm-alt-buffer-mode .repl-inner .repl-block {
    flex: 1;
}
tab.xterm-alt-buffer-mode .repl {
    background: var(--color-stripe-01);
    /*align-items: flex-end;*/ /* snap emacs, vi, nano to the right */
}
tab.xterm-alt-buffer-mode .repl-block:not(.processing), tab.xterm-alt-buffer-mode .repl-input, tab.xterm-alt-buffer-mode .repl-result-spinner {
    display: none;
}

tab:not(.xterm-alt-buffer-mode) .xterm.xterm-empty-row-heuristic .xterm-rows > div:empty {
    display: none;
}

.xterm .xterm-rows .xterm-hidden-row {
    display: none;
}

.xterm-container .xterm-fg-7.xterm-dim {
    opacity: 1;
    color: var(--color-text-02);
}

/* rules for terminated xterm */
/* hide cursor block for terminated processes */
.xterm-terminated .xterm-rows .xterm-cursor {
    display: none;
}
/* try to disable xterm components for terminated processes */
.xterm-terminated .xterm-helper-textarea {
    display: none;
    pointer-events: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;    
}
.xterm-terminated .xterm {
    user-select: unset;
    -webkit-user-select: unset;
}

/* override the width and height pixel sizing from DomRenderer */
.xterm-terminated .xterm-rows > div {
    height: 1.14375em !important;
    line-height: normal !important;
}
.xterm-container .xterm-rows > div > span {
    width: auto !important;
    white-space: pre;
}

/* themes */
.xterm-container .xterm-viewport, .xterm-rows {
    background: var(--color-base00) !important;
}
.xterm-rows {
    font-size: 1em !important;
    font-family: var(--font-monospace) !important;
    color: var(--color-text-01) !important;
    transition: font-size 10ms ease-in-out, background 300ms ease-in-out;
}
.xterm-rows > div > span {
    transition: color 300ms ease-in-out;
    color: var(--color-text-01) !important;
}
.xterm-rows .xterm-fg-0, .xterm-rows .xterm-fg-8 {
    color: var(--color-black) !important;
}
.xterm-rows .xterm-fg-1, .xterm-rows .xterm-fg-9 {
    color: var(--color-red) !important;
}
.xterm-rows .xterm-fg-2, .xterm-rows .xterm-fg-10 {
    color: var(--color-green) !important;
}
.xterm-rows .xterm-fg-3, .xterm-rows .xterm-fg-11 {
    color: var(--color-yellow) !important;
}
.xterm-rows .xterm-fg-4, .xterm-rows .xterm-fg-12 {
    color: var(--color-blue) !important;
}
.xterm-rows .xterm-fg-5, .xterm-rows .xterm-fg-13 {
    color: var(--color-magenta) !important;
}
.xterm-rows .xterm-fg-6, .xterm-rows .xterm-fg-14 {
    color: var(--color-cyan) !important;
}
.xterm-rows .xterm-fg-7, .xterm-rows .xterm-fg-15 {
    color: var(--color-white) !important;
}

