fix(plugins/plugin-bash-like): pty stays stuck at last fixed width
Fixes #1518

--- a/plugins/plugin-bash-like/web/css/xterm.css
+++ b/plugins/plugin-bash-like/web/css/xterm.css
@@ -46,6 +46,9 @@ tab:not(.xterm-alt-buffer-mode) .xterm.xterm-empty-row-heuristic .xterm-rows > d
 .xterm-terminated .xterm-rows .xterm-cursor {
     display: none;
 }
+.xterm-terminated .xterm-screen {
+    width: auto !important;
+}
 /* try to disable xterm components for terminated processes */
 .xterm-terminated .xterm-helper-textarea {
     display: none;
